# lil-radio

./: .env  .gitignore  README.md  package-lock.json  package.json  quasar.conf.js  quasar.extensions.json
db/: dbUtils.js
db/migrations/: 001-initial-schema.sql
rust/: Cargo.toml  test.db
rust/src/: db.rs  lib.rs  main.rs  models.rs  sweep.rs
rust/src/models/: album.rs  artist.rs  data.rs  song.rs
rust/tests/: basic.rs
server/: index.js
server/controllers/: album.js  artist.js  chunk.js  settings.js  songs.js  station.js
server/graphql/: chunk.js  settings.js  station.js
server/utils/: sweep.js
src-electron/db/: dbUtils.js  index.js
src-electron/db/controllers/: songs.js
src-electron/db/files/: settings.db
src-electron/db/models/: album.js  artist.js  data.js  song.js  station.js
src-electron/main-process/: electron-main.js  main-window.js  tray.js
src-electron/main-process/windows/: main-window.js  station-window.js  tray-window.js  tray.js
src-electron/server/: index.js  schema.js
src-electron/server/controllers/: settings.js  songs.js  station.js
src-electron/server/graphql/: album.js  artist.js  data.js  index.js  settings.js  song.js  station.js
src-electron/server/models/: chunk.js  station.js
src-electron/sql/: dbUtils.js  server.js
src/apollo/: apollo-client-config.js
src/css/: app.scss  quasar.variables.scss
src/layouts/: MainLayout.vue
src/mixins/: DoubleClickHandler.js  Selectable.js
src/pages/: Index.vue  Settings.vue  StationWindow.vue  TrayWindow.vue
src/router/: routes.js
src/store/: index.js
(+36 files in other folders)
