[package]
name = "lil-radio-rust"
version = "0.1.0"
authors = ["Dave Dietrick <djdietrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fallible-streaming-iterator = "0.1.9"
id3 = "0.6.2"
mp3-duration = "0.1.10"
notify = "4.0.15"
path-slash = "0.1.4"
wasm-bindgen = "0.2.73"
log = "0.4.14"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
